After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 645650 - gsm-manager.c: Bump phase timeout to 30 seconds
gsm-manager.c: Bump phase timeout to 30 seconds
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
: 644547 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-03-25 19:36 UTC by Colin Walters
Modified: 2011-03-28 21:07 UTC
See Also:
GNOME target: 3.0
GNOME version: ---


Attachments
gsm-manager.c: Bump phase timeout to 30 seconds (1.41 KB, patch)
2011-03-25 19:37 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2011-03-25 19:36:46 UTC
10 seconds is probably just too short for live media and the like,
see the comment in the source.
Comment 1 Colin Walters 2011-03-25 19:37:40 UTC
Created attachment 184209 [details] [review]
gsm-manager.c: Bump phase timeout to 30 seconds
Comment 2 Matthias Clasen 2011-03-26 11:34:52 UTC
Makes sense to me
Comment 3 Colin Walters 2011-03-26 20:06:08 UTC
See also https://bugzilla.gnome.org/show_bug.cgi?id=645756
Comment 4 Frederic Peters 2011-03-27 16:50:49 UTC
*** Bug 644547 has been marked as a duplicate of this bug. ***
Comment 5 Colin Walters 2011-03-28 21:07:41 UTC
Attachment 184209 [details] pushed as 916dc29 - gsm-manager.c: Bump phase timeout to 30 seconds