gsm-manager.c: Bump phase timeout to 30 seconds

10 seconds is probably just too short for live media and the like,
see the comment in the source.

https://bugzilla.gnome.org/show_bug.cgi?id=645650